[package]
name = "snowflake"
version = "1.0.0"
edition = "2021"
authors = ["zdrawai团队"]
description = "基于改进的Twitter雪花算法的Rust实现"
license = "MIT"

[[bin]]
name = "snowflake"
path = "snowflake.rs"

[[bin]]
name = "stress_test"
path = "stress_test.rs"



[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
once_cell = "1.19"
hostname = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }